Fixed width on mobile devices

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1158,4 +1158,7 @@
     .project-tile-preview {
         min-width: unset;
     }
+    .project-tile-content {
+        width: unset !important;
+    }
 }
